# twograms

./: Cargo.toml  README.md  index.html
.github/workflows/: pr.yml
benches/: generate.rs  hhgttg.txt
src/: alice.txt  generate.rs  lib.rs  main.rs  parse.rs  test.rs
web/: twograms.comparison.js
