[package]
name = "twograms"
version = "0.1.0"
authors = ["Björn Söderqvist <cybear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
# criterion = "0.3"

[[bench]]
name = "generate"
harness = false
