[package]
name = "twograms"
version = "0.1.0"
authors = ["Björn Söderqvist <cybear@gmail.com>"]
edition = "2018"
description = "A (newbie) n-grams implementation in Rust"
repository = "https://github.com/cybear/twograms/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "twograms"
path = "src/bin/main.rs"

[lib]
name = "twograms"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-wasm-bindgen = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_derive = "1.0.119"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "generate"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
